Interop configuration cascade call

--- a/OpenWT.Contact.Api/OpenWT.Contact.Api.csproj
+++ b/OpenWT.Contact.Api/OpenWT.Contact.Api.csproj
@@ -8,5 +8,9 @@
     <Folder Include="Controllers" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OpenWT.Contact.Service\OpenWT.Contact.Service.csproj" />
+  </ItemGroup>
+
 
 </Project>
