--- a/OpenWT.Contact.Service/OpenWT.Contact.Service.csproj
+++ b/OpenWT.Contact.Service/OpenWT.Contact.Service.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions, Version=3.1.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
+      <HintPath>C:\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\3.1.2\ref\netcoreapp3.1\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OpenWT.Contact.Infrastructure\OpenWT.Contact.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
