--- a/OpenWT.Contact.Api/appsettings.json
+++ b/OpenWT.Contact.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "DbSettings": {
+    "ConnectionStrings": "User ID=postgres;Password=test42;Host=localhost;Port=5432;Database=contact;",
+    "SqlProvider": "Postgre"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
