--- a/OpenWT.Contact.Data/OpenWT.Contact.Data.csproj
+++ b/OpenWT.Contact.Data/OpenWT.Contact.Data.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OpenWT.Contact.Data.Contract\OpenWT.Contact.Data.Contract.csproj" />
+  </ItemGroup>
+  
 </Project>
