--- a/OpenWT.Contact.Infrastructure.Contract/OpenWT.Contact.Infrastructure.Contract.csproj
+++ b/OpenWT.Contact.Infrastructure.Contract/OpenWT.Contact.Infrastructure.Contract.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OpenWT.Contact.Data\OpenWT.Contact.Data.csproj" />
+  </ItemGroup>
+
 </Project>
