Rename project OpenWT.Contact.Service to OpenWT.Contact.Application

--- a/OpenWT.Contact.Api/OpenWT.Contact.Api.csproj
+++ b/OpenWT.Contact.Api/OpenWT.Contact.Api.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OpenWT.Contact.Service\OpenWT.Contact.Service.csproj" />
+    <ProjectReference Include="..\OpenWT.Contact.Application\OpenWT.Contact.Application.csproj" />
   </ItemGroup>
 
 
