--- a/OpenWT.Contact.Application/OpenWT.Contact.Application.csproj
+++ b/OpenWT.Contact.Application/OpenWT.Contact.Application.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OpenWT.Contact.Application.Contract\OpenWT.Contact.Application.Contract.csproj" />
     <ProjectReference Include="..\OpenWT.Contact.Infrastructure\OpenWT.Contact.Infrastructure.csproj" />
   </ItemGroup>
 
