--- a/OpenWT.Contact.Application/OpenWT.Contact.Application.csproj
+++ b/OpenWT.Contact.Application/OpenWT.Contact.Application.csproj
@@ -14,7 +14,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OpenWT.Contact.Application.Contract\OpenWT.Contact.Application.Contract.csproj" />
+    <ProjectReference Include="..\OpenWT.Contact.Application.Data\OpenWT.Contact.Application.Data.csproj" />
     <ProjectReference Include="..\OpenWT.Contact.Infrastructure\OpenWT.Contact.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
