--- a/OpenWT.Contact.Api/appsettings.json
+++ b/OpenWT.Contact.Api/appsettings.json
@@ -10,5 +10,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JWT": {
+    "ValidAudience": "http://localhost:5000",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+  },
   "AllowedHosts": "*"
 }
